--- a/index.css
+++ b/index.css
@@ -1,8 +1,8 @@
-body {
+#main {
     padding-bottom: 100px;
 }
 
-footer {
+#footer {
     height: 100px;
     position: relative;
     margin-top: -100px;
