--- a/index.css
+++ b/index.css
@@ -1,10 +1,17 @@
-#main {
-    padding-bottom: 100px;
+#main{
+    width: 300px;
+    height: 300px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin: -150px 0 0 -150px;
 }
 
-#footer {
+#footer{
+    width: 300px;
     height: 100px;
-    position: relative;
-    margin-top: -100px;
-    margin: 0px auto;
+    position: absolute;
+    bottom: 5%;
+    left: 50%;
+    margin-left: -150px;
 }
