--- a/index.css
+++ b/index.css
@@ -8,12 +8,12 @@
 }
 
 #footer{
-    width: 600px;
-    height: 150px;
+    width: 565px;
+    height: 135px;
     position: absolute;
     bottom: 5%;
     left: 50%;
-    margin-left: -300px;
+    margin-left: -282.5px;
     background-color: antiquewhite;
 }
 
@@ -24,5 +24,5 @@
     border: 0px;
     width: 565px;
     height: 135px;
-    background-color: red;
+    background-color: #222222;
 }
