--- a/index.css
+++ b/index.css
@@ -1,11 +1,11 @@
 #main{
-    width: 800px;
-    height: 800px;
+    width: 720px;
+    height: 720px;
     position: absolute;
     top: 50%;
     left: 50%;
-    margin: -400px 0 0 -400px;
-    background-color: #AAA;
+    margin: -360px 0 0 -360px;
+    background-color: #DDD;
 }
 
 #footer{
