--- a/assets/css/my_css.css
+++ b/assets/css/my_css.css
@@ -1,7 +1,7 @@
 #footer_ad{
     z-index: 100;
     width: 300px;
-    height: 216px;
+    height: 150px;
     position: fixed;
     bottom: 10px;
     left: 50%;
@@ -11,5 +11,6 @@
 #ad_frame
 {
     width: 300px;
-    height: 216px;
+    height: 150px;
+    background-color: brown;
 }
