--- a/assets/css/my_css.css
+++ b/assets/css/my_css.css
@@ -13,3 +13,19 @@
     width: 356px;
     height: 116px;
 }
+
+#footer_ad_2{
+    z-index: 100;
+    width: 616px;
+    height: 616px;
+    position: fixed;
+    bottom: 10px;
+    left: 50%;
+    margin-left: -308px;
+}
+
+#ad_frame_2
+{
+    width: 616px;
+    height: 616px;
+}
